# canopus

./: .gitattributes  .gitignore  README.md  bigadder.ipynb  compile_to_isa.py  cx_chain.qasm  layering.ipynb  notes.md  plot_algorithm_comparison.py  pyproject.toml  qiskit_runtime.ipynb  rrr.ipynb  script.py  test_cost_est.py  translator_simple.py
accel/src/: lib.rs
analysis/: approx_synth.ipynb  bqskit-gpu.py  canopus.ipynb  cnot_to_canonical.ipynb  cx_chain.qasm  gate_set_profiling.ipynb  gate_time_setting.ipynb  heron_qpu.ipynb  ibm_torino_calibrations_2025-08-15T08_32_54Z.csv  mirroring_sabre.ipynb  optimal_synth.ipynb  routing_overhead.ipynb  routing_with_advanced_isa.ipynb  swap_commutation.ipynb  swap_opt_opport.ipynb
attic/: convert.py  logical_cx_gcm_n13.qasm  logical_tk2_gcm_n13.qasm  tket_compilation.ipynb  tket_optypes.ipynb  xxdecomposer.py
backup/: normalize_can_coord.py
benchmarks/: description.csv  gene_mirage_benchmark.py  gene_qft_18.py  process_qasmbench_medium.py  sum_circ_info.py  tket_read.py
benchmarks/medium/: bv_n19.qasm  dnn_n16.qasm  gcm_n13.qasm  ghz_state_n23.qasm  ising_n26.qasm  knn_n25.qasm  qec9xz_n17.qasm  qf21_n15.qasm  qft_n18.qasm  qpeexact_n16.qasm  wstate_n27.qasm
benchmarks/mirage/: ae_16.qasm  bigadder_n18.qasm  multiplier_n15.qasm  qpeexact_n16.qasm  qram_n20.qasm  sat_n11.qasm  swap_test_n25.qasm
canopus/: __init__.py  backends.py  basics.py  commutation.py  datatypes.py  evaluation.py  mapping.py  routing.py  sabre.py  synthesis.py  utils.py
canopus/utils/: __init__.py  functions.py
configs/: het_isa_coverage.pkl  sqisw_with_mirror_coverage.pkl  stabilizer_isa_coverage.pkl  zzphase_coverage.pkl  zzphase_with_mirror_coverage.pkl
docs/: drawing.ipynb  main.tex  reference.bib  refs.bib  reqisc_refs.bib
docs/algorithms/: depth_trans.tex  update_L_D_C.tex
docs/sections/: aaa.ipynb  aaa.py  aaa.tex  appendix_A.tex  appendix_B.tex  appendix_C.tex  appendix_D.tex  background.tex  canopus.tex  conclusion.tex  evaluation.tex  implementation.tex  introduction.tex  motivation.tex  related.tex  study.tex
docs/tables/: benchmark_table.tex  breakdown_table.tex  isa_setting.tex  qft_example.tex  result_table.tex  routing_overhead_count.tex  routing_overhead_depth.tex
examples/: bench_qldpc.py  qft_10_canopus_cx.qasm  qft_10_canopus_zzphase.qasm  qft_10_qiskit_cx.qasm  qft_12_canopus_cx.qasm  qft_12_canopus_zzphase.qasm  qft_12_qiskit_cx.qasm  qft_6_canopus_cx.qasm  qft_6_canopus_zzphase.qasm  qft_6_qiskit_cx.qasm  qft_8_canopus_cx.qasm  qft_8_canopus_zzphase.qasm  qft_8_qiskit_cx.qasm  qft_cloud.ipynb  qft_cloud.py  qft_cloud_job_ids.json  qft_cx_vs_zz TEST.ipynb  qft_cx_vs_zz.ipynb  qft_cx_vs_zz_10 TEST.ipynb  qft_cx_vs_zz_12 TEST copy.ipynb  qft_cx_vs_zz_6 TEST.ipynb  qft_cx_vs_zz_8 TEST.ipynb  qft_fidelities.json  qiskit(1).ipynb  random_su4_circuit_zzphase.qasm  rebase_circuit.py  rebase_iswap.py  rebase_qft.py  rebase_random_unitary.py  rzx_to_rzz.ipynb
experiments/: Makefile  bench_all.py  bench_all_bqskit.py  bench_all_nocomm.py  bench_all_sabre.py  bench_all_suppl.py  bench_all_toqm.py  bench_demo.py  bench_example.py  bench_qft.py  bench_qldpc.py  bench_single.py  bench_stim copy.ipynb  bench_stim.ipynb  bench_stim.py  bench_stim_without_hardware.py  bench_utils.py  bqskit_synth.ipynb  comm_analysis.ipynb  compare_coverage_lookup_efficiency.ipynb  debug_demo.ipynb  demo_can.qasm  demo_can_sabre.qasm  disp_result.py  eval_circuit.py  gene_logic_opt_circuits.py  gene_toqm_couplings.py  qc_canopus_cx.qasm  qc_canopus_cx_pre_stim.qasm  qc_canopus_stab.qasm  qc_canopus_stab_pre_stim.qasm  qc_sabre_and_canopus_pre_stim.ipynb  qc_sabre_cx.qasm  qc_sabre_cx_pre_stim.qasm  qc_sabre_stab.qasm  qc_sabre_stab_pre_stim.qasm  result_display.py  result_summary.py  run.sh  run_nocomm.sh  (+9 more)
experiments/analysis/: aaa.ipynb  bench_gbcode[[18,2,5]].txt  benchmark_table.tex  breakdown.ipynb  breakdown_comm.py  debug.py  debug_qft.py  efficiency.ipynb  eval_details.ipynb  evaluation.ipynb  evaluation_new.ipynb  gene_count_depth_tables.py  qft.ipynb  qft_study.py  qqq.ipynb  result_sabre_chain_depth.tex  result_table.ipynb  result_table.tex  result_table_part1.tex  result_table_part2.tex  result_table_part3.tex  runtime_analysis.py  runtime_quantum_volume_10.npy  runtime_quantum_volume_15.npy  runtime_quantum_volume_20.npy  runtime_random_circuit.npy  runtime_random_circuit_10.npy  runtime_random_circuit_20.npy  stab_circ copy.ipynb  stab_circ.ipynb  zzphase_vs_cx.ipynb
experiments/qldpc_circ/: syndrome_measurement_circ_CSSCode.stim  syndrome_measurement_circ_SteaneCode.stim
experiments/results/: bqskit-chain-count.csv  bqskit-chain-depth.csv  bqskit-chain.csv  bqskit-hhex-count.csv  bqskit-hhex-depth.csv  bqskit-hhex.csv  bqskit-square-count.csv  bqskit-square-depth.csv  bqskit-square.csv  canopus-chain-count.csv  canopus-chain-depth.csv  canopus-chain.csv  canopus-hhex-count.csv  canopus-hhex-depth.csv  canopus-hhex.csv  canopus-square-count.csv  canopus-square-depth.csv  canopus-square.csv  canopus_depth-chain-count.csv  canopus_depth-chain-depth.csv  canopus_depth-hhex-count.csv  canopus_depth-hhex-depth.csv  canopus_depth-square-count.csv  canopus_depth-square-depth.csv  canopus_nocomm-chain-count.csv  canopus_nocomm-chain-depth.csv  canopus_nocomm-chain.csv  canopus_nocomm-hhex-count.csv  canopus_nocomm-hhex-depth.csv  canopus_nocomm-hhex.csv  canopus_nocomm-square-count.csv  canopus_nocomm-square-depth.csv  canopus_nocomm-square.csv  canopus_num-chain-count.csv  canopus_num-chain-depth.csv  canopus_num-hhex-count.csv  canopus_num-hhex-depth.csv  canopus_num-square-count.csv  canopus_num-square-depth.csv  canopus_param0-chain.csv  (+26 more)
experiments/tables/: benchmark_table.tex  comp_chain_count.tex  comp_chain_cx_count.tex  comp_chain_cx_depth.tex  comp_chain_depth.tex  comp_chain_het_count.tex  comp_chain_het_depth.tex  comp_chain_sqisw_count.tex  comp_hhex_count.tex  (+42 more)
tests/: test_accel_utils.py  test_synthesis.py  test_utils.py
(+3422 files in other folders)
