# ==============================================================================
# BUILD SYSTEM CONFIGURATION
#
# This section is mandatory. It tells pip and other build frontends how to
# build your project. For Rust/Python mixed projects, 'maturin' is the
# recommended build backend.
# ==============================================================================
[build-system]
requires = ["setuptools"]

# ==============================================================================
# PROJECT METADATA (PEP 621)
#
# This section contains the core metadata for your package, which will be
# displayed on PyPI.
# ==============================================================================
[project]
# The name of your package on PyPI. It must be unique. Hyphens are recommended.
name = "canopus"

# The version of your package.
# You can hardcode it here or load it dynamically from a file.
# If left empty, maturin will default to using the version from your Cargo.toml.
version = "0.1.0"

# A short, one-line description of the project.
description = "Canopus (Canonical Optimized Placement Utility Suite) is a qubit mapping/routing framework tailored to advanced quantum ISAs."

# Path to your README file. Its content will be used as the project's homepage on PyPI.
readme = "README.md"

# The Python versions your project supports.
requires-python = ">=3.8"

# The project's license. Using an SPDX identifier is recommended.
# Common choices: "MIT", "Apache-2.0", "GPL-3.0-or-later"
# Maturin can automatically infer this if it's defined in your Cargo.toml.
license = { file = "LICENSE" }

# List of authors.
authors = [
    { name = "Youngcius", email = "your-email@example.com" },
    # { name = "Another Author", email = "another@example.com" },
]

# Keywords describing your project, which help with discovery on PyPI.
keywords = ["scientific-computing", "task-scheduling", "rust", "high-performance"]

# PyPI Trove classifiers, providing structured metadata for your package.
# For a full list, see: https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# Runtime dependencies. These are packages required for your project to run.
dependencies = [
    "pytket~=2.4.1",
    "qiskit~=1.4.3",
    "cirq~=1.5.0"
]

# ==============================================================================
# OPTIONAL DEPENDENCIES / EXTRAS
#
# Define sets of dependencies for specific features (e.g., for testing, development).
# Users can install these via 'pip install canopus[test,dev]'.
# ==============================================================================
[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]
dev = [
    "canopus[test]", # Automatically includes the 'test' dependencies
    "ruff",         # Linter and formatter
    "mypy",         # Static type checker
    "ipykernel",    # For Jupyter Notebook support
]

# ==============================================================================
# PROJECT URLS
#
# A list of links related to your project.
# ==============================================================================
[project.urls]
Homepage = "https://github.com/Youngcius/canopus"
Repository = "https://github.com/Youngcius/canopus"
"Bug Tracker" = "https://github.com/Youngcius/canopus/issues"

# ==============================================================================
# CONSOLE SCRIPTS
#
# Defines console scripts that will be created when the package is installed.
# ==============================================================================
# [project.scripts]
# your-cli-command = "your_package.cli:main"

# ==============================================================================
# MATURIN CONFIGURATION (for the Rust Extension)
#
# This section tells maturin how to build and place your Rust extension module.
# ==============================================================================
[tool.maturin]
# This directive tells maturin to compile the Rust code in this project
# and make it available as a submodule of the 'canopus' Python package.
# The last part of the path ('_accel') should match the `[lib].name` in your Cargo.toml.
#
# Example: If your Python package is in a folder named `my_package`
# and your Rust lib name is `_internal`, you should set:
# module-name = "my_package._internal"
module-name = "canopus._accel"


# ==============================================================================
# DEVELOPMENT TOOLS CONFIGURATION
# ==============================================================================

# --- Ruff (Linter and Formatter) ---
[tool.ruff]
# The Python source directories to check.
src = ["canopus"]
line-length = 120

[tool.ruff.lint]
# Select the rule sets to enable.
# E, W: pycodestyle | F: Pyflakes | I: isort | UP: pyupgrade | B: flake8-bugbear
select = ["E", "W", "F", "I", "UP", "B"]

[tool.ruff.format]
# Configure code formatting options.
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"


# --- Pytest (Test Runner) ---
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --color=yes"
testpaths = [
    "tests",
]

# --- MyPy (Static Type Checker) ---
[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true # Ignore import errors for libraries without type stubs.
